[tool.poetry]
name = "wordle-solver"
version = "0.1.0"
description = ""
authors = ["Matt Woolley <matt.wool@live.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pylint = "^3.0.3"
pyright = "^1.1.344"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
